--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,44 @@
 /* Other rules */
+
+/*********HEADER********/
+.logo {
+  width: 180px;
+}
+.header {
+  height: 60px;
+  border-bottom: 5px solid #8f6acd;
+}
+
+/****************CONTAINER************/
+.resto-container {
+  width: 1280px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 30px auto auto;
+}
+.resto-infos {
+  border: 2px solid grey;
+  width: 300px;
+  height: 600px;
+  margin-right: auto;
+}
+.form-container {
+  position: absolute;
+}
+.form {
+  position: relative;
+  top: 150px;
+  left: 400px;
+}
+/***************IMAGE***************/
+.photo-resto {
+  width: 270px;
+  height: 175px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin: 10px auto 10px 15px;
+}
+.image-accueil {
+  margin-bottom: 50px;
+  height: 300px;
+}
