--- a/src/App.css
+++ b/src/App.css
@@ -232,7 +232,8 @@ a {
   margin-right: 50px;
 }
 /******MODAL*********************************/
-.button {
+* .button {
+  /* margin-left: 700px; */
   width: 100px;
   height: 45px;
   font-size: 20px;
@@ -242,6 +243,11 @@ a {
   display: flex;
   outline: none;
   align-items: center;
+}
+.button-header {
+  display: flex;
+  justify-content: flex-end;
+  width: 150px;
 }
 .overlay {
   background-color: rgba(0, 0, 0, 0.5);
@@ -258,6 +264,7 @@ a {
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 900; /*permets de resoudre le problème de position du modal sur la page home*/
   /* centrer le modal sur l'axe x (longueur) et sur l'axe y (hauteur) */
   transform: translate(-50%, -50%);
 }
@@ -276,7 +283,8 @@ form {
 }
 input,
 .container-form button,
-.register {
+.register,
+select {
   width: 250px;
   height: 50px;
   margin: 10px 0;
@@ -320,4 +328,14 @@ input,
 .image-modal img {
   width: 390px;
   height: 465px;
+}
+/********************page register************/
+.container-register {
+  display: flex;
+}
+.form-register {
+  width: 600px;
+  height: 800px;
+
+  margin-left: 10px;
 }
